MPL-31: implement role based access using jwt